Adjusted .chapter padding from 2.95em to 3.35em to avoid clipping wth .nav bar

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ footer {
 }
 
 .chapter {
-    padding-top: 2.95em;
+    padding-top: 3.35em;
     text-align: center;
     padding: 0.5 0 0em;
     font-size: 23px;
